--- a/No_4.1.csproj
+++ b/No_4.1.csproj
@@ -18,4 +18,8 @@
     </COMReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
